# aghpb-api

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  anime_girls.py  docker-compose.yml  errors.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  template.env
.github/: FUNDING.yml
.github/workflows/: ruff.yml  ty.yml
api/: anime_girls.py  book.py  constants.py  errors.py  info.py  main.py  repository.py
api/routers/: docs.py
app/: book.py  colours.py  constants.py  dependencies.py  errors.py  info.py  main.py  repository.py
app/routers/: books.py
scripts/: bench_book_load.py  docker_build.py
src/: anime_girls.py  main.py
