[project]
name = "aghpb-api"
description = "📚 Feature Rich API for Anime Girls Holding Programming Books."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "~=3.12.0"
license = { file = "LICENSE" }
keywords = [
    "aghpb_api", "aghpb", "anime girls holding programming books"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "thefuzz~=0.22.1",
    "python-decouple~=3.8",
    "pydantic~=2.13.2",
    "fastapi[standard]~=0.136.0",
    "fastapi-limiter~=0.2.0",
    "pyrate-limiter~=4.1.0",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ty~=0.0.31",
    "ruff~=0.15.11",
    "snakeviz~=2.2.2",
]

[project.urls]
GitHub = "https://github.com/THEGOLDENPRO/aghpb_api"
BugTracker = "https://github.com/THEGOLDENPRO/aghpb_api/issues"

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
